[gd_scene load_steps=3 format=3 uid="uid://test_arena"]

[ext_resource type="Script" path="res://Scripts/TestArena.gd" id="1_arena"]

[sub_resource type="StyleBoxFlat" id="StyleBox_1"]
bg_color = Color(0.1, 0.1, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.6, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="TestArena" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_arena")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "ТЕСТОВАЯ АРЕНА"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.8, 0.4, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.8)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemySelectorLabel" type="Label" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2
text = "ВЫБОР ВРАГА:"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.8, 0.6, 0.4, 1)

[node name="EnemyList" type="ScrollContainer" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemyButtons" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel/EnemyList"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RaritySelectorLabel" type="Label" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2
text = "РЕДКОСТЬ ВРАГА:"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)

[node name="RarityButtons" type="HBoxContainer" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2

[node name="CommonBtn" type="Button" parent="MainContainer/ContentContainer/LeftPanel/RarityButtons"]
layout_mode = 2
text = "Обычный"
custom_minimum_size = Vector2(80, 30)

[node name="UncommonBtn" type="Button" parent="MainContainer/ContentContainer/LeftPanel/RarityButtons"]
layout_mode = 2
text = "Необычный"
custom_minimum_size = Vector2(80, 30)

[node name="RareBtn" type="Button" parent="MainContainer/ContentContainer/LeftPanel/RarityButtons"]
layout_mode = 2
text = "Редкий"
custom_minimum_size = Vector2(80, 30)

[node name="EpicBtn" type="Button" parent="MainContainer/ContentContainer/LeftPanel/RarityButtons"]
layout_mode = 2
text = "Эпический"
custom_minimum_size = Vector2(80, 30)

[node name="LegendaryBtn" type="Button" parent="MainContainer/ContentContainer/LeftPanel/RarityButtons"]
layout_mode = 2
text = "Легендарный"
custom_minimum_size = Vector2(80, 30)

[node name="LevelSelector" type="VBoxContainer" parent="MainContainer/ContentContainer/LeftPanel"]
layout_mode = 2

[node name="LevelSelectorLabel" type="Label" parent="MainContainer/ContentContainer/LeftPanel/LevelSelector"]
layout_mode = 2
text = "УРОВЕНЬ ВРАГА:"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)

[node name="LevelSpinBox" type="SpinBox" parent="MainContainer/ContentContainer/LeftPanel/LevelSelector"]
layout_mode = 2
min_value = 1.0
max_value = 50.0
value = 1.0
custom_minimum_size = Vector2(100, 30)

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleControlsLabel" type="Label" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2
text = "УПРАВЛЕНИЕ БОЕМ:"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.8, 0.6, 0.4, 1)

[node name="BattleButtons" type="VBoxContainer" parent="MainContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartBattleBtn" type="Button" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2
text = "НАЧАТЬ БОЙ"
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18

[node name="HSeparator2" type="HSeparator" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2

[node name="HealControlsLabel" type="Label" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2
text = "ВОССТАНОВЛЕНИЕ:"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)

[node name="HealButtons" type="HBoxContainer" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2

[node name="HealPlayerBtn" type="Button" parent="MainContainer/ContentContainer/RightPanel/BattleButtons/HealButtons"]
layout_mode = 2
text = "Лечить игрока"
custom_minimum_size = Vector2(120, 40)

[node name="HealEnemyBtn" type="Button" parent="MainContainer/ContentContainer/RightPanel/BattleButtons/HealButtons"]
layout_mode = 2
text = "Лечить врага"
custom_minimum_size = Vector2(120, 40)

[node name="HSeparator3" type="HSeparator" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2

[node name="ResetControlsLabel" type="Label" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2
text = "СБРОС:"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.8, 0.6, 1)

[node name="ResetButtons" type="HBoxContainer" parent="MainContainer/ContentContainer/RightPanel/BattleButtons"]
layout_mode = 2

[node name="ResetPlayerBtn" type="Button" parent="MainContainer/ContentContainer/RightPanel/BattleButtons/ResetButtons"]
layout_mode = 2
text = "Сбросить игрока"
custom_minimum_size = Vector2(120, 40)

[node name="ResetEnemyBtn" type="Button" parent="MainContainer/ContentContainer/RightPanel/BattleButtons/ResetButtons"]
layout_mode = 2
text = "Сбросить врага"
custom_minimum_size = Vector2(120, 40)

[node name="HSeparator4" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="BottomButtons" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="MainContainer/BottomButtons"]
layout_mode = 2
text = "Назад к локациям"
custom_minimum_size = Vector2(150, 40)

[node name="CurrentEnemyLabel" type="Label" parent="MainContainer/BottomButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Выбранный враг: Нет"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
